--- a/projects/fluffy-duck/src/index.html
+++ b/projects/fluffy-duck/src/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html dir="rtl" lang="ar">
+<!-- <html dir="rtl" lang="ar"> -->
   <head>
     <meta charset="utf-8" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Changa:wght@200;500&family=Hurricane&display=swap" rel="stylesheet">
-    <title>FluffyDuck</title>
-    <base href="/" />
+<link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">    <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <link
@@ -23,18 +21,10 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./assets/css/style.css" />
-
-    <!-- <link rel="stylesheet" href="./assets/css/owl.carousel.min.css">
-    <link rel="stylesheet" href="./assets/css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="./assets/fonts/flaticon/font/flaticon.css">
-    <link rel="stylesheet" href="./assets/css/aos.css"> -->
-
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.10/angular.min.js"></script>
 
   </head>
   <body>
     <app-root></app-root>
-  <!-- <script src="./assets/js/myjs/js.js"></script> -->
   </body>
 </html>
